[package]
name = "irs-1094b-error-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.22.0"
csv = "1.1.6"
regex = "1.5.4"
lazy_static = "1.4.0"
iced = "0.3.0"
native-dialog = "0.6.3"
